--- a/tests/python/pants_test/tasks/BUILD
+++ b/tests/python/pants_test/tasks/BUILD
@@ -436,6 +436,17 @@ python_tests(
 )
 
 python_tests(
+  name = 'markdown_to_html_integration',
+  sources = ['test_markdown_to_html_integration.py'],
+  dependencies = [
+    'src/python/pants/backend/core/tasks:markdown_to_html',
+    'src/python/pants/base:build_environment',
+    'src/python/pants/util:dirutil',
+    'tests/python/pants_test:int-test',
+  ]
+)
+
+python_tests(
   name = 'minimal_cover',
   sources = ['test_minimal_cover.py'],
   dependencies = [
