add new integration test to list of integration tests, d'oh

--- a/tests/python/pants_test/tasks/BUILD
+++ b/tests/python/pants_test/tasks/BUILD
@@ -71,6 +71,7 @@ python_test_suite(
     ':jar_publish_integration',
     ':jvm_bundle_integration',
     ':jvm_run_integration',
+    ':markdown_to_html_integration',
     ':scala_repl_integration',
     ':protobuf_integration',
   ],
